Estudiando mypy.py

--- a/p.ipynb
+++ b/p.ipynb
@@ -2,46 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing time: 500.09 ms\n"
+      "1\n",
+      "1.0\n"
      ]
     }
    ],
    "source": [
-    "import time\n",
-    "import contextlib\n",
+    "from typing import TypeVar\n",
     "\n",
-    "class Timing(contextlib.ContextDecorator):\n",
-    "    def __init__(self, prefix=\"\", on_exit=None, enabled=True):\n",
-    "        self.prefix = prefix\n",
-    "        self.on_exit = on_exit\n",
-    "        self.enabled = enabled\n",
-    "    \n",
-    "    def __enter__(self):\n",
-    "        self.st = time.perf_counter_ns()\n",
-    "    \n",
-    "    def __exit__(self, *exc):\n",
-    "        self.et = time.monotonic() - self.st\n",
-    "        if self.enabled:\n",
-    "            print(f\"{self.prefix}{self.et*1e-6:6.2f} ms\")\n",
+    "# T = TypeVar('T')\n",
     "\n",
-    "# Usando `Timing` para medir tiempo de ejecución\n",
-    "with Timing(\"Processing time: \"):\n",
-    "    time.sleep(0.5)  # Simulación de un proceso que toma tiempo\n"
+    "def first_element(number: int) -> int:\n",
+    "    return number\n",
+    "\n",
+    "print(first_element(1))        # Funciona bien y devuelve un int\n",
+    "print(first_element(1.0))      # Funciona bien y devuelve un float"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(first_element([1, 2, 3]))"
+   ]
   }
  ],
  "metadata": {
@@ -60,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
